--- a/loader.css
+++ b/loader.css
@@ -75,5 +75,14 @@ body{
   
 }
 
-
+footer{
+  position: absolute;
+  bottom: -2px;
+  font-weight: lighter;
+  left: 4px;
+display: flex;
+align-items: end;
+color: #fff;
+font-family: 'Times New Roman', Times, serif;
+}
 
